Support Java 8 as the minimum Java version
Signed-off-by: Daniel Lacasse <daniel@nokee.dev>